# PicoAtom

./: .gitignore  6847.c  6847.h  Atom.c  CMakeLists.txt  README.md  fake6502.c  fake6502.h  main.c  main.h
Atom/: Atom.h  abasic.h  afloat.h  akernel.h  atommc2-2.9-e000.h  sdromraw.h
AtomMMC/: AtoMMCInterface.c  AtoMMCInterface.h  atmmc2.h  atmmc2core.c  atmmc2io.h  atmmc2wfn.c  ff.c  ffconf.h  mmcio.c  mmcio.h  platform.h
ILI9341/: ILI9341_DMA.c  ILI9341_DMA.h  ILI9341_Dragon.c  ILI9341_Dragon.h  ILI9341_Driver.c  ILI9341_Driver.h  ILI9341_GFX.c  ILI9341_GFX.h  ILI9341_Text.c  ILI9341_Text.h  ILI9341_Touchscreen.c  ILI9341_Touchscreen.h  fonts.h
PS2/: matrix_kbd.c  matrix_kbd.h  ps2kbd.c  ps2kbd.h  ps2scancode.h  scancode.h
Utils/: delays.c  delays.h  hexout.c  hexout.h  status.c  status.h  str_util.c  str_util.h
